; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_coalition.c_coalition_fill_procinfo.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_coalition.c_coalition_fill_procinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.coalition = type { i32, i32 }
%struct.procinfo_coalinfo = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.coalition*, %struct.procinfo_coalinfo*)* @coalition_fill_procinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @coalition_fill_procinfo(%struct.coalition* %0, %struct.procinfo_coalinfo* %1) #0 {
  %3 = alloca %struct.coalition*, align 8
  %4 = alloca %struct.procinfo_coalinfo*, align 8
  store %struct.coalition* %0, %struct.coalition** %3, align 8
  store %struct.procinfo_coalinfo* %1, %struct.procinfo_coalinfo** %4, align 8
  %5 = load %struct.coalition*, %struct.coalition** %3, align 8
  %6 = getelementptr inbounds %struct.coalition, %struct.coalition* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.procinfo_coalinfo*, %struct.procinfo_coalinfo** %4, align 8
  %9 = getelementptr inbounds %struct.procinfo_coalinfo, %struct.procinfo_coalinfo* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 4
  %10 = load %struct.coalition*, %struct.coalition** %3, align 8
  %11 = getelementptr inbounds %struct.coalition, %struct.coalition* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.procinfo_coalinfo*, %struct.procinfo_coalinfo** %4, align 8
  %14 = getelementptr inbounds %struct.procinfo_coalinfo, %struct.procinfo_coalinfo* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load %struct.coalition*, %struct.coalition** %3, align 8
  %16 = call i32 @coalition_get_task_count(%struct.coalition* %15)
  %17 = load %struct.procinfo_coalinfo*, %struct.procinfo_coalinfo** %4, align 8
  %18 = getelementptr inbounds %struct.procinfo_coalinfo, %struct.procinfo_coalinfo* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  ret void
}

declare dso_local i32 @coalition_get_task_count(%struct.coalition*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
